; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_posix_sem.c_mac_posixsem_vnode_label_associate.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_posix_sem.c_mac_posixsem_vnode_label_associate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pseminfo = type { i32 }
%struct.label = type { i32 }

@vnode_label_associate_posixsem = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mac_posixsem_vnode_label_associate(i32 %0, %struct.pseminfo* %1, %struct.label* %2, i32 %3, %struct.label* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.pseminfo*, align 8
  %8 = alloca %struct.label*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.label*, align 8
  store i32 %0, i32* %6, align 4
  store %struct.pseminfo* %1, %struct.pseminfo** %7, align 8
  store %struct.label* %2, %struct.label** %8, align 8
  store i32 %3, i32* %9, align 4
  store %struct.label* %4, %struct.label** %10, align 8
  %11 = load i32, i32* @vnode_label_associate_posixsem, align 4
  %12 = load i32, i32* %6, align 4
  %13 = load %struct.pseminfo*, %struct.pseminfo** %7, align 8
  %14 = load %struct.label*, %struct.label** %8, align 8
  %15 = load i32, i32* %9, align 4
  %16 = load %struct.label*, %struct.label** %10, align 8
  %17 = call i32 @MAC_PERFORM(i32 %11, i32 %12, %struct.pseminfo* %13, %struct.label* %14, i32 %15, %struct.label* %16)
  ret void
}

declare dso_local i32 @MAC_PERFORM(i32, i32, %struct.pseminfo*, %struct.label*, i32, %struct.label*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
